# letterboxd-bot

./: Cargo.toml  LICENSE
.github/workflows/: weekly_message.yaml
src/: main.rs
