[package]
name = "letterboxd_bot"
version = "0.1.0"
edition = "2024"

[dependencies]
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }
rss = "2.0"
chrono = "0.4"
tokio = { version = "1", features = ["full"] }
csv = "1.3"
url = "2.5"
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
regex = "1"
